--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "derive-tech-web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,7 +18,7 @@
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
     "jquery-mousewheel": "^3.1.13",
-    "next": "13.2.4",
+    "next": "^15.1.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
