--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
     "jquery-mousewheel": "^3.1.13",
-    "next": "^15.1.7",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
