--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_URL=https://phpstack-611111-4140859.cloudwaysapps.com/api/v1/
-NEXT_PUBLIC_WEB_APP_URL=https://www.derivetech.com
+##NEXT_PUBLIC_WEB_APP_URL=https://www.derivetech.com
 # NEXT_PUBLIC_WEB_APP_URL=http://localhost:3000
