--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js for tests and builds
+      # Step 2: Set up Node.js for testing and building
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -33,14 +33,26 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # Step 5: Deploy to VM via SSH
+      # Step 5: Deploy to GCP VM
       - name: Deploy to VM
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << 'EOF'
-          cd derive-tech-app || exit
-          git pull origin main
+          # Navigate to the app directory (create if it doesn’t exist)
+          mkdir -p /home/${{ secrets.VM_USER }}/nextjs-app && cd /home/${{ secrets.VM_USER }}/nextjs-app
+
+          # Pull the latest changes from the repository
+          git init
+          git remote add origin git@github.com:estesfausto/derive-tech-app.git || true
+          git fetch origin
+          git reset --hard origin/main
+
+          # Install Node.js dependencies
           npm install
+
+          # Build the application
           npm run build
+
+          # Start or reload the app using PM2
           pm2 reload app || pm2 start npm --name "app" -- start
           EOF
     env:
