--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GCP VM
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -14,26 +14,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up SSH for connection
+      # Step 2: Set up SSH and log in with passphrase
       - name: Set up SSH
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
-          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+          eval "$(ssh-agent -s)"
           echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add ~/.ssh/id_rsa
-        env:
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
 
       # Step 3: Deploy to GCP VM
       - name: Deploy to GCP VM
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << 'EOF'
+          # Navigate to the derive-tech-app folder
           cd ~/derive-tech-app
+
+          # Pull the latest changes from the repository
           git pull origin main
+
+          # Install dependencies
           npm install
+
+          # Build the app
           npm run build
+
+          # Start or reload the app using PM2
           pm2 reload app || pm2 start npm --name "app" -- start
           EOF
         env:
