--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy Application
         run: |
-          ./google-cloud-sdk/bin/gcloud compute ssh username@your-vm-name --command "
+          ./google-cloud-sdk/bin/gcloud compute ssh fausto@34.42.230.190 --command "
           cd derive-tech-app
           git pull origin main
           npm install
