--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 -d > gcp-key.json
           ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file=gcp-key.json
-          ./google-cloud-sdk/bin/gcloud config set project your-project-id
+          ./google-cloud-sdk/bin/gcloud config set project alpine-furnace-237115
 
       - name: Deploy Application
         run: |
