--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,37 @@
-name: CI/CD Pipeline
+name: CI/CD Deployment to GCP VM
 
 on:
   push:
     branches:
-      - master
+      - master # Triggderf the workflow on pushes #to the main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout Code
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Set up GCP Credentials
-      - name: Set up GCP Credentials
-        run: echo "${{ secrets.GCLOUD_KEY_FILE }}" > key.json
-
-      # Authenticate with GCP
-      - name: Authenticate GCP
+      - name: Set Up Google Cloud CLI
         run: |
-          gcloud auth activate-service-account --key-file=key.json
-          gcloud config set project alpine-furnace-237115
+          curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-419.0.0-linux-x86_64.tar.gz
+          tar -xvf google-cloud-cli-419.0.0-linux-x86_64.tar.gz
+          ./google-cloud-sdk/install.sh
+          ./google-cloud-sdk/bin/gcloud --version
 
-      # Deploy Application
-      - name: Deploy to GCP VM
+      - name: Authenticate with GCP
         run: |
-          gcloud compute ssh fausto@34.42.230.190 --command "
-          cd derive-tech-app &&
-          git pull &&
-          pm2 restart all"
+          echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 -d > gcp-key.json
+          ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file=gcp-key.json
+          ./google-cloud-sdk/bin/gcloud config set project alpine-furnace-237115
+
+      - name: Deploy Application
+        run: |
+          ./google-cloud-sdk/bin/gcloud compute ssh fausto@34.42.230.190 --command "
+          cd derive-tech-app
+          git pull origin main
+          npm install
+          npm run build
+          pm2 start npm --name "new-app" -- start
+          "
