--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Google Cloud Auth
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
+          project_id: ${{ env.PROJECT_ID }}
+
       - name: Set Up Google Cloud CLI
         run: |
           curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-419.0.0-linux-x86_64.tar.gz
           tar -xvf google-cloud-cli-419.0.0-linux-x86_64.tar.gz
           ./google-cloud-sdk/install.sh
           ./google-cloud-sdk/bin/gcloud --version
-
-      - name: Authenticate with GCP
-        run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 -d > gcp-key.json
-          ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file=gcp-key.json
-          ./google-cloud-sdk/bin/gcloud config set project alpine-furnace-237115
 
       - name: Deploy Application
         run: |
