--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,13 @@ jobs:
       - name: Deploy Application
         run: |
           ./google-cloud-sdk/bin/gcloud compute ssh fausto@derive-web-staging --zone=us-central1-f --command "
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          echo "${{ secrets.SSH_PASSPHRASE }}" > ~/.ssh/passphrase
+          echo '${{ secrets.SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+          echo '${{ secrets.SSH_PASSPHRASE }}' > ~/.ssh/passphrase
+          chmod 600 ~/.ssh/passphrase
           cd derive-tech-app
           git pull origin main
           npm install
           npm run build
-          pm2 start npm --name "latest-derive" -- start
+          pm2 start npm --name 'latest-derive' -- start
           "
