--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,18 @@ jobs:
           ./google-cloud-sdk/install.sh
           ./google-cloud-sdk/bin/gcloud --version
 
+      - name: Clear Application Folder
+        run: |
+          ./google-cloud-sdk/bin/gcloud compute ssh fausto@derive-web-staging --zone=us-central1-f --command "
+          cd derive-tech-app
+          rm -rf *
+          echo 'All files in derive-tech-app folder have been deleted.'
+          "
+
       - name: Deploy Application
         run: |
           ./google-cloud-sdk/bin/gcloud compute ssh fausto@derive-web-staging --zone=us-central1-f --command "
           cd derive-tech-app
-          rm -fr *
-          rm -fr .env
           git config --global credential.helper store
           git pull https://estesfausto:${{ secrets.GITHUB_PAT }}@github.com/estesfausto/derive-tech-app.git master
           npm install
