--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy Application
         run: |
-          ./google-cloud-sdk/bin/gcloud compute ssh fausto@derive-web-staging --zone=us-central1-f --command "
+          ./google-cloud-sdk/bin/gcloud compute ssh fausto@derive-app-staging --zone=us-central1-f --command "
           cd derive-tech-app
           rm -fr .next
           rm -fr .env
